--- a/c03-glwe-mult-plain.tex
+++ b/c03-glwe-mult-plain.tex
@@ -5,7 +5,7 @@ $ $
 
 Suppose we have a GLWE ciphertext $C$:
 
-$C = \textsf{GLWE}_{S, \sigma}(M) = ( A_1, A_2, ... \text{ } A_{k-1}, B) \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$
+$C = \textsf{GLWE}_{S, \sigma}(\Delta M) = ( A_0, A_1, ... \text{ } A_{k-1}, B) \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$
 
 $ $
 
@@ -41,8 +41,8 @@ $ $
 \begin{myproof}
 \begin{enumerate}
 \item Define the following notations: \\
+$A_0' = \Lambda \cdot A_0$ \\
 $A_1' = \Lambda \cdot A_1$ \\
-$A_2' = \Lambda \cdot A_2$ \\
 $...$ \\
 $A_{k-1}' = \Lambda \cdot A_{k-1}$ \\
 $E' = \Lambda \cdot E$ \\
@@ -55,8 +55,7 @@ $= \sum\limits_{i=0}^{k-1}{((\Lambda \cdot A_i) \cdot S_i)} + \Delta \cdot (\Lam
 $= \sum\limits_{i=0}^{k-1}{(A_i' \cdot S_i)} + \Delta \cdot (\Lambda \cdot M) + (E')$ \\
 \item Since $B' = \sum\limits_{i=0}^{k-1}{(A_i' \cdot S_i)} + \Delta \cdot (\Lambda \cdot M) + (E')$, 
 
-$(A_1', A_2', ... \text{ } A_{k-1}'
-, B')$ form the ciphertext $\textsf{GLWE}_{S, \sigma}(\Delta \cdot \Lambda \cdot M)$.
+$(A_0', A_1', A_2', ... \text{ } A_{k-1}', B')$ form the ciphertext $\textsf{GLWE}_{S, \sigma}(\Delta \cdot \Lambda \cdot M)$.
 \item Thus, \\
 $\Lambda \cdot \textsf{GLWE}_{S, \sigma}(\Delta M)$ \\
 $ = (\Lambda \cdot A_0, \text { } \Lambda \cdot A_1, ... \text{ } \Lambda \cdot A_{k-1}, \text { } \Lambda \cdot B)$ \\
@@ -69,7 +68,7 @@ $= \textsf{GLWE}_{S, \sigma}(\Delta (M \cdot \Lambda) )$
 \end{enumerate}
 \end{myproof}
 
-If we decrypt $\textsf{GLWE}_{S, \sigma}(\Delta \cdot \Lambda \cdot M)$ by using $S$, then we get the plaintext $\Lambda \cdot M$. Meanwhile, $A_1', A_2', ... \text{ } A_{k-1}', E'$ get eliminated by rounding during decryption, regardless of whatever their values were randomly sampled during encryption. 
+If we decrypt $\textsf{GLWE}_{S, \sigma}(\Delta \cdot \Lambda \cdot M)$ by using $S$, then we get the plaintext $\Lambda \cdot M$. Meanwhile, $A_0', A_1', A_2', ... \text{ } A_{k-1}', E'$ get eliminated by rounding during decryption, regardless of whatever their values were randomly sampled during encryption. 
 
 The noise is a bigger problem now, because after decryption, the original ciphertext $C$'s noise has increased from $E$ to $E' = \Lambda \cdot E$. This means that if we continue multiplication computations without decrypting the ciphertext to blow away the noise $E'$, it will continue growing more and eventually the noise in the lower bit area in $B$ will overflow to the scaled plaintext bit area. If this happens, the noise $E'$ won't be blown away during decryption, ending up corrupting the plaintext $M$. Therefore, if the constant $\Lambda$ is big, it is recommended to use gadget decomposition (\autoref{subsec:gadget-decomposition}), which we will explain in the next subsection. 
 
