--- a/d05-rns.tex
+++ b/d05-rns.tex
@@ -620,7 +620,7 @@ $ $
 
 The above computation result is guaranteed to be an integer (as we proved in the proof step 1). And $q$ and $b_\alpha$ are co-prime (by the input definition). This leads to the conclusion that 
 
-$ \dfrac{v + u - \Big||b_\alpha\cdot + vq + uq|_{b} \cdot q^{-1}\Big|_{b_\alpha}}{b_\alpha}$ is guaranteed to be an integer. Therefore, if we choose $b_\alpha$ (i.e., a prime and co-prime to both $q$ and $b$) as a sufficiently large value, then $ \dfrac{v + u - \Big||b_\alpha\cdot x + vq + uq|_{b} \cdot q^{-1}\Big|_{b_\alpha}}{b_\alpha}$ will converge to $\{-1, 0, 1\}$. This is because as $b_\alpha$ increases: (1) $v$ grows slower than $b_\alpha$ (since $|b_\alpha\cdot x|_q = b_\alpha\cdot x + vq$); (2) the magnitude of $u$ stays smaller than $\dfrac{k}{2} + 1$ (as integer $|u| \leq \dfrac{k}{2}+1$); and (3) $\Big||b_\alpha\cdot x + vq + uq|_{b} \cdot q^{-1}\Big|_{b_\alpha}$ is guaranteed to be an integer between $\left[-\dfrac{b_\alpha+1}{2}, \dfrac{b_\alpha}{2} - 1\right]$. In conclusion, if $b_\alpha$ is sufficiently large, then we get the following relation: 
+$ \dfrac{v + u - \Big||b_\alpha\cdot x + vq + uq|_{b} \cdot q^{-1}\Big|_{b_\alpha}}{b_\alpha}$ is guaranteed to be an integer. Therefore, if we choose $b_\alpha$ (i.e., a prime and co-prime to both $q$ and $b$) as a sufficiently large value, then $ \dfrac{v + u - \Big||b_\alpha\cdot x + vq + uq|_{b} \cdot q^{-1}\Big|_{b_\alpha}}{b_\alpha}$ will converge to $\{-1, 0, 1\}$. This is because as $b_\alpha$ increases: (1) $v$ grows slower than $b_\alpha$ (since $|b_\alpha\cdot x|_q = b_\alpha\cdot x + vq$); (2) the magnitude of $u$ stays smaller than $\dfrac{k}{2} + 1$ (as integer $|u| \leq \dfrac{k}{2}+1$); and (3) $\Big||b_\alpha\cdot x + vq + uq|_{b} \cdot q^{-1}\Big|_{b_\alpha}$ is guaranteed to be an integer between $\left[-\dfrac{b_\alpha+1}{2}, \dfrac{b_\alpha}{2} - 1\right]$. In conclusion, if $b_\alpha$ is sufficiently large, then we get the following relation: 
 
 $\left|\dfrac{c - q\cdot c'}{b_\alpha}\right|_{b} = x + u'q \bmod b$ \textcolor{red}{ \# where $u' \in \{-1, 0, 1\}$}
 
