--- a/a12-modulus-rescaling.tex
+++ b/a12-modulus-rescaling.tex
@@ -14,7 +14,7 @@ $a + c \equiv b + d\bmod q$
 
 $a \cdot c \equiv b \cdot d\bmod q$
 
-Now, suppose we want to rescale the modulo of the above congruence relations from $q \rightarrow q'$, where $q' \gap{$|$} q$ (i.e., $q'$ divides all of $q$, or $q$ is a multiple of $q'$). Then, the accordingly updated congruence relations are as shown in \autoref{tab:rescaling}.
+Now, suppose we want to rescale the modulo of the above congruence relations from $q \rightarrow q'$, where $q' \mid q$ (i.e., $q'$ divides all of $q$, or $q$ is a multiple of $q'$). Then, the accordingly updated congruence relations are as shown in \autoref{tab:rescaling}.
 
 
 
