--- a/a08-cyclotomic-polynomial.tex
+++ b/a08-cyclotomic-polynomial.tex
@@ -58,12 +58,12 @@ According to Definition~\ref*{subsec:cyclotomic-def} in \autoref{subsec:cyclotom
 \end{proof}
 
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:cyclotomic-theorem}.2} Polynomial Decomposition into Cyclotomic Polynomials}}]
-For any positive integer $n$, \[ x^n - 1 = \prod_{d \gap{$|$} n} \Phi_d(x) \]
+For any positive integer $n$, \[ x^n - 1 = \prod_{d \mid n} \Phi_d(x) \]
 \end{tcolorbox}
 \begin{myproof}
 \begin{enumerate}
     \item The roots of $x^n - 1$ are all the $n$-th roots of unity. Thus, $x^n - 1 = (x - \omega^0)(x - \omega^1)...(x - \omega^{n-1})$, where $\zeta = \omega^k$.
-    \item Theorem~\ref*{subsec:roots-theorem}.3 states that each $n$-th root of unity ($\omega^k$) is a primitive $d$-th root of unity for some $d$ that divides $n$. In other words, each $n$-th root of unity belongs to some $P(d)$ where $d \gap{$|$} n$. Meanwhile, by definition, $\Phi_d(x) = \Pi_{\zeta \in P(d)} (x - \zeta)$. Therefore, $x^n - 1$ is a multiplication of all $\Phi_d(x)$ such that $d \gap{$|$} n$. 
+    \item Theorem~\ref*{subsec:roots-theorem}.3 states that each $n$-th root of unity ($\omega^k$) is a primitive $d$-th root of unity for some $d$ that divides $n$. In other words, each $n$-th root of unity belongs to some $P(d)$ where $d \mid n$. Meanwhile, by definition, $\Phi_d(x) = \Pi_{\zeta \in P(d)} (x - \zeta)$. Therefore, $x^n - 1$ is a multiplication of all $\Phi_d(x)$ such that $d \mid n$. 
 \end{enumerate}
 \end{myproof}
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:cyclotomic-theorem}.3} Integer Coefficients of Cyclotomic Polynomials}}]
@@ -75,17 +75,17 @@ A cyclotomic polynomial has only integer coefficients.
     \item Let $x^n - 1 = f(x) \cdot g(x) = (\Sigma_{i=0}^{p}a_ix^i)(\Sigma_{j=0}^{q}b_jx^i)$. As an induction hypothesis 1, we will prove that if $f(x)$ has only integer coefficients, then $g(x)$ will also have only integer coefficients. Given our target equation is $x^n - 1$, we know that $a_px_p \cdot b_qx_q = x^n$, and thus $a_pb_q = 1$, which means $a_p = \pm 1$ (as we hypothesized that $f(x)$ has only integer coefficients). We also know that $a_0b_0 = -1$. All the other coefficients should be 0. Thus, for any $r < q$, the coefficients are either: (i) $a_pb_{r} + a_{p-1}b_{r + 1} + ... + a_{p-q+r}b_{q} = 0$; or (ii) $a_pb_{r} + a_{p-1}b_{r + 1} + ... + a_{0}b_{r+p} = 0$. Both case (i) and (ii) represent $f(x)\cdot g(x)$'s computed coefficient of some $x^i$ where $0 < i < n$. Now, we propose another induction hypothesis 2, which is that $b_{q}, ... \text{ } b_{r+1}$ are all integers.
     \item In the case of (i), $a_pb_{r} = -(a_{p-1}b_{r + 1} + ... + a_{p-q+r}b_{q})$, and dividing both sides by $a_p$ (which is either $1$ or $-1$), $b_{r} = \pm(a_{p-1}b_{r + 1} + ... + a_{p-q+r}b_{q})$, as every $a_i$ is an integer based on our hypothesis. By induction hypothesis 1 and 2, $b_r$ is an integer. The same is true in the case of (ii). 
     \item We set $b_q$ (an integer coefficient) as the starting point for induction hypothesis 2. Then, according to induction proof 2, all of $b_j$ for $0 \leq j \leq q$ are integers.
-    \item Now, we set $\Phi_1(X)$ (an integer coefficient polynomial) as the starting point for induction hypothesis 1. Let $x^n - 1 = \Phi_{d_1}(X)\Phi_{d_2}(X)...\Phi_{d_k}(X)\Phi_{n}(X)$, where each $d_i \gap{$|$} n$ (Theorem~\ref*{subsec:cyclotomic-theorem}.1). We know that $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ forms an integer coefficient polynomial. We treat $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ as $f(x)$, and $\Phi_n(X)$ as $g(x)$.
+    \item Now, we set $\Phi_1(X)$ (an integer coefficient polynomial) as the starting point for induction hypothesis 1. Let $x^n - 1 = \Phi_{d_1}(X)\Phi_{d_2}(X)...\Phi_{d_k}(X)\Phi_{n}(X)$, where each $d_i \mid n$ (Theorem~\ref*{subsec:cyclotomic-theorem}.1). We know that $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ forms an integer coefficient polynomial. We treat $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ as $f(x)$, and $\Phi_n(X)$ as $g(x)$.
     Then, according to step 4's induction proof, $\Phi_{n}(X)$ is an integer coefficient polynomial (also note that $\Phi_n(X)$ is monoic, whose the highest degree's coefficient is 1). 
-    \item As we marginally increase $n$ to $n+1$ to compute $x^{n+1} - 1 = \Phi_{d'_1}(X)\Phi_{d'_2}(X)...\Phi_{d'_k}(X)\Phi_{n+1}(X)$ (where each $d'_i \gap{$|$} (n+1)$), we know that $\Phi_{d'_1}(X)\Phi_{d'_2}(X)\cdots\Phi_{d'_k}(X)$ is a monoic polynomial, as proved by the previous induction step. Thus, $\Phi_{n+1}(X)$ is also monoic. 
+    \item As we marginally increase $n$ to $n+1$ to compute $x^{n+1} - 1 = \Phi_{d'_1}(X)\Phi_{d'_2}(X)...\Phi_{d'_k}(X)\Phi_{n+1}(X)$ (where each $d'_i \mid (n+1)$), we know that $\Phi_{d'_1}(X)\Phi_{d'_2}(X)\cdots\Phi_{d'_k}(X)$ is a monoic polynomial, as proved by the previous induction step. Thus, $\Phi_{n+1}(X)$ is also monoic. 
 \end{enumerate}
 \end{myproof}
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:cyclotomic-theorem}.4} Formula for $\bm{\Phi_{nk}(x)}$}}]
-If $k \gap{$|$} n$, then $\Phi_{nk}(x) = \Phi_n(x^k)$.
+If $k \mid n$, then $\Phi_{nk}(x) = \Phi_n(x^k)$.
 \end{tcolorbox}
 \begin{myproof}
 \begin{enumerate}
-    \item Theorem~\ref*{subsec:order-theorem}.3 states that given $k \gap{$|$} n$, $\text{ord}_{\mathbb{F}}(a) = kn$ if and only if $\text{ord}_{\mathbb{F}}(a^k) = n$. This means that for $\zeta \in \mathbb{C}$, $\text{ord}_{\mathbb{C}}(\zeta) = nk$ if and only if $\text{ord}_{\mathbb{C}}(\zeta^k) = n$. In other words, $\zeta$ is a primitive $nk$-th root of unity if and only if $\zeta^k$ is the primitive $n$-th root of unity. This implies that $\zeta$ is a root of $\Phi_{nk}(x)$ if and only if $\zeta^k$ is a root of $\Phi_{n}(x)$. 
+    \item Theorem~\ref*{subsec:order-theorem}.3 states that given $k \mid n$, $\text{ord}_{\mathbb{F}}(a) = kn$ if and only if $\text{ord}_{\mathbb{F}}(a^k) = n$. This means that for $\zeta \in \mathbb{C}$, $\text{ord}_{\mathbb{C}}(\zeta) = nk$ if and only if $\text{ord}_{\mathbb{C}}(\zeta^k) = n$. In other words, $\zeta$ is a primitive $nk$-th root of unity if and only if $\zeta^k$ is the primitive $n$-th root of unity. This implies that $\zeta$ is a root of $\Phi_{nk}(x)$ if and only if $\zeta^k$ is a root of $\Phi_{n}(x)$. 
     \item Let $\Phi_{nk}(x) = (x - \zeta_1)(x - \zeta_2)...(x - \zeta_p)$, where $P(n)$ has $p$ primitive $nk$-th roots of unity.
     \item $\Phi_{n}(x) = (x - \zeta_1^k)(x - \zeta_2^k)...(x - \zeta_p^k)$. Note that $P(n)$ should also have $p$ primitive $n$-th roots of unity, because elements of $P(nk)$ are isomorphic to the elements of $P(n)$ (as they preserved if and only if relationships in step 2). Now, it's also true that $\Phi_{n}(y) = (y - \zeta_1^k)(y - \zeta_2^k)...(y - \zeta_p^k)$, where $y = x^k$. In this case, $x = \{\zeta_1, \zeta_2, ... \zeta_p\}$.
     \item $\Phi_{nk}(x)$ and $\Phi_{n}(y) = \Phi_{n}(x^k)$ have the same roots with the same coefficients. Therefore, $\Phi_{nk}(x) = \Phi_{n}(y) = \Phi_{n}(x^k)$. 
