TFHE -> GLWE typo fix

--- a/00-main.tex
+++ b/00-main.tex
@@ -297,8 +297,8 @@ $ $
 
 %$ $
 
-This book is available both as an \href{https://arxiv.org/abs/2503.05136}{\textbf{arXiv PDF}} and on an \href{https://fhetextbook.github.io} {\textbf{auto-generated website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
-Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. As this book is an evolving open project, we welcome FHE experts to join us as collaborators and help expand the draft.
+This book is available both as an \href{https://arxiv.org/abs/2503.05136}{\textbf{arXiv PDF}} and on an \href{https://fhetextbook.github.io} {\textbf{auto-generated website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). This book is an evolving, open project; please report any errors or suggestions regarding the draft on the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}.
+
 
 
 
