--- a/c03-glwe-mult-plain.tex
+++ b/c03-glwe-mult-plain.tex
@@ -33,7 +33,7 @@ $= (\{\Lambda\cdot A_i^{\langle 1 \rangle}\}_{i=0}^{k-1}, \text{ } \Lambda \cdot
 $= \textsf{GLWE}_{S, \sigma}(\Delta (M \cdot \Lambda) )$
 \end{tcolorbox}
 
-This means that multiplying a plaintext (polynomial) by a ciphertext (polynomial) and decrypting it gives the same result as multiplying the two original plaintext polynomials.  
+This means that multiplying a plaintext polynomial $\Lambda$ by a GLWE ciphertext that encrypts $M$  and decrypting it yields $M \cdot \Lambda$.  
 
 $ $
 
