--- a/c01-glwe-add-cipher.tex
+++ b/c01-glwe-add-cipher.tex
@@ -12,7 +12,7 @@ $\textsf{GLWE}_{S, \sigma}(\Delta M^{\langle 2 \rangle} ) = C^{\langle 2 \rangle
 
 $ $
 
-\noindent Let's define the following TFHE ciphertext addition operation: 
+\noindent Let's define the following ciphertext addition operation: 
 
 $C^{\langle 1 \rangle} + C^{\langle 2 \rangle} = ( A_0^{\langle 1 \rangle} + A_0^{\langle 2 \rangle}, \text{ } A_1^{\langle 1 \rangle} + A_1^{\langle 2 \rangle}, \text{ } ... \text{ } A_{k-1}^{\langle 1 \rangle} + A_{k-1}^{\langle 2 \rangle}, \text{ } B^{\langle 1 \rangle} + B^{\langle 2 \rangle} )$
 
@@ -31,7 +31,7 @@ $= \textsf{GLWE}_{S, \sigma}(\Delta(M^{\langle 1 \rangle} + M^{\langle 2 \rangle
 \end{tcolorbox}
 
 
-This means that adding two TFHE ciphertexts and decrypting the resulting ciphertext gives the same effect as adding two original ($\Delta$-scaled) plaintexts: $\Delta M^{\langle 1 \rangle} + \Delta M^{\langle 2 \rangle} = \Delta \cdot (M^{\langle 1 \rangle} + M^{\langle 2 \rangle})$. 
+This means that adding two GLWE ciphertexts (each of which encrypts $M^{\langle 1 \rangle}$ and $M^{\langle 2 \rangle}$) and decrypting the resulting ciphertext yields $M^{\langle 1 \rangle} + M^{\langle 2 \rangle}$. 
 
 $ $
 
@@ -54,7 +54,7 @@ $= \sum\limits_{i=0}^{k-1}{(A_i^{\langle 3 \rangle} \cdot S_i)} + \Delta \cdot (
 
 this means that $(A_0^{\langle 3 \rangle}, A_1^{\langle 3 \rangle}, A_2^{\langle 3 \rangle}, ... \text{ } A_{k-1}^{\langle 3 \rangle}, B^{\langle 3 \rangle})$ form the ciphertext: $\textsf{GLWE}_{S, \sigma}(\Delta \cdot (M^{\langle 1 \rangle} + M^{\langle 2 \rangle}))$. \\
 \item Thus, \\
-$= \textsf{GLWE}_{S, \sigma}(\Delta M^{\langle 1 \rangle}) + \textsf{GLWE}_{S, \sigma}(\Delta M^{\langle 2 \rangle})$ \\
+$\textsf{GLWE}_{S, \sigma}(\Delta M^{\langle 1 \rangle}) + \textsf{GLWE}_{S, \sigma}(\Delta M^{\langle 2 \rangle})$ \\
 $ = ( A_0^{\langle 1 \rangle} + A_0^{\langle 2 \rangle}, \text{ } A_1^{\langle 1 \rangle} + A_1^{\langle 2 \rangle}, \text{ } ... \text{ } A_{k-1}^{\langle 1 \rangle} + A_{k-1}^{\langle 2 \rangle}, \text{ } B^{\langle 1 \rangle} + B^{\langle 2 \rangle} )$ \\
 $ = ( A_0^{\langle 3 \rangle}, A_1^{\langle 3 \rangle}, A_2^{\langle 3 \rangle}, ... \text{ } A_{k-1}^{\langle 3 \rangle}, B^{\langle 3 \rangle})$ \\
 $ = ( \{A_i^{\langle 3 \rangle}\}_{i=0}^{k-1}, B^{\langle 3 \rangle})$ \\
