Fix typo multiplication -> addition

--- a/c02-glwe-add-plain.tex
+++ b/c02-glwe-add-plain.tex
@@ -58,4 +58,4 @@ $= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda))$
 
 \subsection{Discussion}
 
-\para{Noise Growth: } Note that after decryption, the original ciphertext $C +\Lambda$'s noise $E$ stays the same as before. This means that ciphertext-to-plaintext multiplication does not increase the noise level.
+\para{Noise Growth: } Note that after decryption, the original ciphertext $C +\Lambda$'s noise $E$ stays the same as before. This means that ciphertext-to-plaintext addition does not increase the noise level.
